--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        *{
+       *{
             margin:0;
             padding: 0;
             box-sizing: border-box
@@ -27,36 +27,14 @@
             --border-color: #999;
             --border-color-hover: #666;
         }
-        .h-button{
-            font-size: var(--font-size);
-            height: var(--button-height);
-            padding: 0 1em;
-            border-radius: var(--border-radius);
-            border: 1px solid var(--border-color);
-            background: var(--button-bg);
-         }
-        .h-button:hover{
-            border-color: var(--border-color-hover) ;
-        }
-        .h-button:active{
-            background-color: var(--button-active-bg);
-        }
-        .h-button:focus{
-            outline: none;
-        }
     </style>
 </head>
 
 <body>
     <div id="app">
-        <h-button></h-button>
+            <h-button></h-button>
     </div>
 </body>
-<script src='./node_modules/vue/dist/vue.min.js'></script>
-<script src='./h-button.js'></script>
-<script>
-    new Vue({
-        el:'#app'
-    })
-</script>
+<script src='./src/app.js'></script>
+
 </html>
