--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 
 <body>
     <div id="app">
-            <h-button></h-button>
+            <h-button icon="download" icon-position="right">按钮</h-button>
     </div>
 </body>
 <script src='./src/app.js'></script>
+<script src="//at.alicdn.com/t/font_1253243_tymoezigl2l.js"></script>
 
 </html>
