--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="app">
-            <h-button icon="download" icon-position="right">按钮</h-button>
+            <h-button icon="download" :loading="loading" icon-position="right" @click="loading=!loading">按钮</h-button>
     </div>
 </body>
 <script src='./src/app.js'></script>
