--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             --border-radius: 4px;
             --color: #333;
             --border-color: #999;
-            --border-color-hover: #666;
+            --border-color-hover: red;
         }
     </style>
 </head>
@@ -33,9 +33,14 @@
 <body>
     <div id="app">
             <h-button icon="download" :loading="loading" icon-position="right" @click="loading=!loading">按钮</h-button>
+            <button-group>
+                <h-button icon="left" :loading="loading" icon-position="left" @click="loading=!loading">按钮</h-button>
+                <h-button :loading="loading"  >按钮</h-button>
+                <h-button icon="right" :loading="loading" icon-position="right" >按钮</h-button>
+            </button-group>
     </div>
 </body>
 <script src='./src/app.js'></script>
-<script src="//at.alicdn.com/t/font_1253243_11kk98wlbih.js"></script>
+<script src="//at.alicdn.com/t/font_1253243_0nyzid3x3eji.js"></script>
 
 </html>
